# replication-24-harsh-generative-ai-release-readiness-checklist

./: .gitignore  Makefile  README.md  grey-resource.md  grey-resources.csv  pyproject.toml
grey_ml_release/: collect.py  dedup.py  process.py  settings.py
mind-map/: index.html
mind-map/2_literature-notes/: glr-–-references.html
mind-map/2_literature-notes/articles/: 3-things-chatgpt-needs-before-it-can-be-deployed-in-customer-service.html  a-developer’s-guide-to-llmops-operationalizing-llms-at-scale.html  age-of-industrialized-ai-dan-jeffries-llms-in-production-conference.html  ai-agents-when-and-how-to-implement.html  best-practices-for-deploying-language-models.html  best-practices-for-deploying-large-language-models-(llms)-in-production.html  best-practices-for-large-language-model-(llm)-deployment.html  best-practices-for-monitoring-large-language-models.html  building-llm-applications-for-production-chip-huyen-llms-in-prod-conference.html  comply-or-die-the-rise-of-the-ai-governance-stack.html  concepts-for-reliability-of-llms-in-production.html  controlled-and-compliant-ai-applications-daniel-whitenack-llms-in-production-conference-part-2.html  deploying-large-language-models-in-production-llm-deployment-challenges.html  deploying-large-language-models-in-production-orchestrating-llms.html  deploying-large-language-models-in-production-the-anatomy-of-llm-applications.html  design-patterns-for-llm-systems-&-products.html  devtools-for-language-models-—-predicting-the-future.html  edition-22-a-framework-to-securely-use-llms-in-companies-part-2-managing-risk.html  (+40 more)
(+4 files in other folders)
